<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="14"
    tools:context=".presentation.fragments.FragmentLogin">

    <TextView
        android:layout_weight="2"
        android:id="@+id/tv_message"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:text="Authentication"
        android:gravity="center" />

    <EditText
        android:layout_weight="2"
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="username"
         />

    <EditText
        android:layout_weight="2"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="password"
         />



    <Button
        android:layout_weight="2"
        android:id="@+id/bt_login"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="login"
        android:layout_gravity="center"
        android:gravity="center" />

</LinearLayout>