<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#187b0b"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="14"
    tools:context=".presentation.fragments.FragmentHelp">

    <TextView
        android:layout_weight="5"
        android:id="@+id/tv_message"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textSize="39sp"
        android:textColor="@color/colorAccent"
        android:text="Help"
        android:gravity="bottom" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_weight="9"
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />



</LinearLayout>